package linguacrypt.model;

public enum Color {
    RED,
    BLUE,
    BLACK,
    WHITE
}