package linguacrypt.model;

import linguacrypt.visitor.Visitable;
import linguacrypt.visitor.Visitor;
import com.fasterxml.jackson.annotation.JsonCreator;
import com.fasterxml.jackson.annotation.JsonProperty;
import com.fasterxml.jackson.annotation.JsonPropertyOrder;

/**
 * Configuration d'une partie de LinguaCrypt.
 * Gère les paramètres comme la taille de la grille, nombre de joueurs, etc.
 */

public class GameConfiguration implements Visitable {
    @JsonProperty("gridSize")
    public static int gridSize;
    
    @JsonProperty("nbPlayers")
    public static int nbPlayers;
    
    @JsonProperty("maxNbSpy")
    public static int maxNbSpy;
    
    @JsonProperty("maxNbOperative")
    public static int maxNbOperative;
    
    @JsonProperty("limitedTime")
    public static int limitedTime; // -1 if time not limited

    @JsonProperty("currentDeck")
    public static Deck currentDeck;

    @JsonProperty("teamManager")
    public static TeamManager teamManager;



    public GameConfiguration() {
        // Valeurs par défaut
        gridSize = 5; // 5x5 par défaut
        nbPlayers = 4;
        maxNbSpy = 1;
        maxNbOperative = 1;
        limitedTime = -1;
        teamManager = new TeamManager();
    }

    @JsonCreator
    public GameConfiguration(
        @JsonProperty("gridSize") int gridSize,
        @JsonProperty("nbPlayers") int nbPlayers,
        @JsonProperty("maxNbSpy") int maxNbSpy,
        @JsonProperty("maxNbOperative") int maxNbOperative,
        @JsonProperty("limitedTime") int limitedTime,
        @JsonProperty("currentDeck") Deck currentDeck,
        @JsonProperty("teamManager") TeamManager teamManager
        ) {
        // gridSize = gridSize;
        // nbPlayers = nbPlayers;
        // maxNbSpy = maxNbSpy;
        // maxNbOperative = maxNbOperative;
        // limitedTime = limitedTime;
    }

    // Getters and Setters
    // public int getGridSize() { return gridSize; }
    // public void setGridSize(int gridSize) { gridSize = gridSize; }
    
    // public int getNbPlayers() { return nbPlayers; }
    // public void setNbPlayers(int nbPlayers) { nbPlayers = nbPlayers; }
    
    // public int getMaxNbSpy() { return maxNbSpy; }
    // public void setMaxNbSpy(int maxNbSpy) { maxNbSpy = maxNbSpy; }
    
    // public int getMaxNbOperative() { return maxNbOperative; }
    // public void setMaxNbOperative(int maxNbOperative) { maxNbOperative = maxNbOperative; }
    
    // public int getLimitedTime() { return limitedTime; }
    // public void setLimitedTime(int limitedTime) { limitedTime = limitedTime; }

    @Override
    public void accept(Visitor visitor) {
        visitor.visit(this);
    }
}