' visibilite/caractere : private(-), protected(#), public(+)

@startuml

package LinguaCrypt{
    package LinguaCrypt.Scene{
        class SceneManager{
            - Stack<ManagedScene> scenes
            - Model model
            - SceneManager instance

            - SceneManager(Stage, Model)
            + void pushScene(ManagedScene)
            + {static} SceneManager getInstance()
            + ManagedScene popScene()
            + void popAllButFirst()
            + ManagedScene peek()
            + ManagedScene getSceneAt(int)
            + int getSceneCount()
            + Stage getPrimaryStage()
            + parent getRoot()
            + void setRoot(Parent)
            + Model getModel()
        }

        abstract class ManagedScene extends Scene {
            - SceneManager sceneManager
            - String fxmlPath
            
            + ManagedScene(SceneManager)
            + ManagedScene(SceneManager, int, int)
            + SceneManager getSceneManager()
            + void setSceneManager(SceneManager)
            + void setFxmlPath(String)
            + String getFxmlPath()
            ' get controller ?
        }

        class MenuScene extends ManagedScene {
            - MenuController controller

            + MenuScene(SceneManager)
        }

        class EditDecks extends ManagedScene {
            - EditDecksController controller

            + EditDecks(SceneManager)
        }

        class Settings extends ManagedScene {
            - SettingsController controller

            + Settings(SceneManager)
        }

        class GameScene extends ManagedScene {
            - GameController controller

            + GameScene(SceneManager)
        }

    note "objet javaFX" as N1
    N1 .. Scene
    SceneManager *-- ManagedScene

    }

    package LinguaCrypt.Controller{ 
        ' un controller par scè1ne 
    }

    package LinguaCrypt.Model{
        enum Color{
            RED, BLUE, BLACK, WHITE
        }

        class Operative extends Player{}

        class Spy extends Player{}

        class Player{
            - String nickName

            + Player(String)
            + String getNickName()
            + void setNickName(String)
        }
        
        class Team{
            - ArrayList<Player> playersList
            - String teamName
            - Color teamColor
            - int nbSpy


            + Team(String, Color)
            + void addPlayer(Player)
            + void removePlayer(Player)
            + void setTeamName(String)
            + String getTeamName()
        }

        class Card{
            - String cardName
            - Color cardColor
            - boolean found

            + Card(String)
            + Card(String, Color)
            + String getCardName()
            + void setCardColor(Color)
            + Color getCardColor()

        }

        class Deck{
            - String deckName
            - ArrayList<Card> cardsList

            + Deck()
            + void addCard(Card)
            + void removeCard(Card)
        }

        class GameConfiguration{
            - int gridSize
            - int nbPlayers
            - int maxNbSpy
            - int maxNbOperative 
            - TeamManager teamManager
            - int limitedTime /' -1 if time not limited  '/
            - Deck currentDeck

            
        }

        class DeckManager{
            - ArrayList<Deck> decksList

            + DeckManager()
            + void addDeck(Deck)
            + void removeDeck(Deck)

            + Deck getDeck(String)
            + Deck getRandomDeck()
            
            
        }

        class TeamManager{
            - Team blueTeam
            - Team redTeam

            + TeamManager()
            + void addTeam(Team)
            + void removeTeam(Team)
        
        }

        class Game{
            - ArrayList<ArrayList<Card>> grid
            - GameConfiguration config
            - int nbTurn
            
            + Game()
            + void initGrid()
            + void loadGrid()
        }

        class Model{
            - DeckManager deckManager
            - Game game
        }



        Team "1"--"*" Player
        Team "1"--"1" Color
        Color "1"--"*" Card
        Card "0,*"--"1,*" Deck
        GameConfiguration "1"-- Game
        GameConfiguration --"1" TeamManager
        TeamManager --"2" Team
        DeckManager "1"--"*" Deck
        Deck --"1" GameConfiguration
        DeckManager "1"-- Model
        Game "1"-- Model
    }
}

@enduml